feat: AI training corrections section, production mail delivery, and performance optimizations